--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-364.7KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇳 中国-250.3KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇫🇷 法国-193.8KB/s(Youtube:不良林), server: 54.36.174.181, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-561.3KB/s(Youtube:不良林), server: 85.208.108.20, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-205.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-974.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.77MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.12MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.34MB/s(Youtube:不良林), server: 85.208.108.59, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.21MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.34MB/s(Youtube:不良林), server: 85.208.108.59, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-3.34MB/s(Youtube:不良林) 2, server: 85.208.108.59, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-974.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-974.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-974.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-974.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-974.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-974.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-364.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-250.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-193.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-561.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-974.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
