--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-579.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇫🇷 法国-188.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.59MB/s(Youtube:不良林), server: 85.208.108.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-6.21MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-161.9KB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-5.95MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-238.1KB/s(Youtube:不良林), server: 54.36.174.181, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇯🇵 日本-1.99MB/s(Youtube:不良林), server: 85.208.108.59, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-452.5KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇫🇷 法国-344.0KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇺🇸 美国-374.5KB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇨🇳 中国-964.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林)
-      - 🇫🇷 法国-188.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-161.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.95MB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-344.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林)
-      - 🇫🇷 法国-188.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-161.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.95MB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-344.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林)
-      - 🇫🇷 法国-188.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-161.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.95MB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-344.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林)
-      - 🇫🇷 法国-188.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-161.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.95MB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-344.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林)
-      - 🇫🇷 法国-188.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-161.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.95MB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-344.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林)
-      - 🇫🇷 法国-188.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-161.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.95MB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-344.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-579.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.97MB/s(Youtube:不良林)
-      - 🇫🇷 法国-188.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-161.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.95MB/s(Youtube:不良林)
+      - 🇫🇷 法国-238.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-344.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
