--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-156.7KB/s(Youtube:不良林), server: 85.208.108.20, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-799.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-986.3KB/s(Youtube:不良林), server: 85.208.108.59, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1000.1KB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
-  - {name: 🇨🇳 中国-212.5KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇺🇸 美国-374.5KB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇨🇳 中国-964.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-986.3KB/s(Youtube:不良林), server: 85.208.108.59, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-340.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇫🇷 法国-262.3KB/s(Youtube:不良林), server: 54.36.174.181, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-316.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-346.7KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-156.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-156.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-156.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-156.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-156.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-156.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-156.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-799.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1000.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-688.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-964.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-986.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.5KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.52MB/s(Youtube:不良林)
       - 🇫🇷 法国-262.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
